I HOPE IT WORKS syncing with memory tree set collection